# slicer_test

./: .gitignore
study/slicers/SL_Tutorials/: CMakeLists.txt
study/slicers/SL_Tutorials/FemurFracturePlanner/: CMakeLists.txt  FemurFracturePlanner.py  README.md  weekly_report.md
study/slicers/SL_Tutorials/FemurFracturePlanner/FemurFracturePlannerLib/: FemurFracturePlannerFragmentManager.py  FemurFracturePlannerLogic.py  FemurFracturePlannerWidget.py  FemurFracturePlannerWorkflow.py  __init__.py
study/slicers/SL_Tutorials/FemurFracturePlanner/Resources/UI/: FemurFracturePlanner.ui
study/slicers/SL_Tutorials/FemurFracturePlanner/doc/: 01_전체구조.md  02_메인모듈과위젯.md  03_워크플로우.md  04_로직계층.md  05_골편관리.md  06_엣지검출로직.md  07_골절면스냅로직.md  README.md
study/slicers/SL_Tutorials/FemurFracturePlannerCpp/: CMakeLists.txt  qSlicerFemurFracturePlannerCppModule.cxx  qSlicerFemurFracturePlannerCppModule.h  qSlicerFemurFracturePlannerCppModulePlannerDialog.cxx  qSlicerFemurFracturePlannerCppModulePlannerDialog.h  qSlicerFemurFracturePlannerCppModuleWidget.cxx  qSlicerFemurFracturePlannerCppModuleWidget.h
study/slicers/SL_Tutorials/FemurFracturePlannerCpp/Logic/: CMakeLists.txt  vtkSlicerFemurFracturePlannerCppLogic.cxx  vtkSlicerFemurFracturePlannerCppLogic.h
study/slicers/SL_Tutorials/FemurFracturePlannerCpp/Resources/: qSlicerFemurFracturePlannerCppModule.qrc
study/slicers/SL_Tutorials/FemurFracturePlannerCpp/Resources/UI/: qSlicerFemurFracturePlannerCppFooBarWidget.ui  qSlicerFemurFracturePlannerCppModulePlannerDialog.ui  qSlicerFemurFracturePlannerCppModuleWidget.ui
study/slicers/SL_Tutorials/FemurFracturePlannerCpp/Testing/Cxx/: CMakeLists.txt  vtkSlicerFemurFracturePlannerCppLogicTest.cxx
study/slicers/SL_Tutorials/FemurFracturePlannerCpp/Widgets/: CMakeLists.txt  qSlicerFemurFracturePlannerCppFooBarWidget.cxx  qSlicerFemurFracturePlannerCppFooBarWidget.h
study/slicers/SL_Tutorials/FemurFracturePlannerCpp/doc/: build_validation_checklist_ko.md  code_review_2026-06-30.md  full_migration_patch_2026-06-30.md  logic_and_flow_2026-06-30.md  static_validation_2026-06-30.txt  troubleshooting.md
study/slicers/SL_Tutorials/t_ApplyThreshold/: CMakeLists.txt  t_ApplyThreshold.py
