#-----------------------------------------------------------------------------
# 모듈 이름 정의 (t_ApplyThreshold)
#-----------------------------------------------------------------------------
set(MODULE_NAME t_ApplyThreshold)

#-----------------------------------------------------------------------------
# 파이썬 소스 코드 스크립트 정의
#-----------------------------------------------------------------------------
set(MODULE_PYTHON_SCRIPTS
  ${MODULE_NAME}.py
  )

#-----------------------------------------------------------------------------
# 모듈에 필요한 리소스 파일 정의 (아이콘 이미지 및 Qt Designer UI 파일)
#-----------------------------------------------------------------------------
set(MODULE_PYTHON_RESOURCES
  Resources/Icons/${MODULE_NAME}.png
  Resources/UI/${MODULE_NAME}.ui
  )

#-----------------------------------------------------------------------------
# Slicer 전용 스크립트 모듈 빌드 매크로 호출
# 이 매크로를 통해 파이썬 스크립트와 리소스가 모듈로 빌드되고 패키징됨
# WITH_GENERIC_TESTS 옵션은 기본적인 제네릭 테스트(자바스크립트/파이썬 린트 등)를 활성화함
#-----------------------------------------------------------------------------
slicerMacroBuildScriptedModule(
  NAME ${MODULE_NAME}
  SCRIPTS ${MODULE_PYTHON_SCRIPTS}
  RESOURCES ${MODULE_PYTHON_RESOURCES}
  WITH_GENERIC_TESTS
  )

#-----------------------------------------------------------------------------
# 테스트 빌드 옵션(BUILD_TESTING)이 켜져 있을 경우 실행할 테스트 구성
#-----------------------------------------------------------------------------
if(BUILD_TESTING)

  # 메인 파이썬 스크립트 파일 내의 unittest 서브클래스들을 CTest(CMake 테스트 러너)에 등록
  # 이 테스트들은 런타임(Slicer 앱 내)에서도 유효함
  slicer_add_python_unittest(SCRIPT ${MODULE_NAME}.py)

  # 추가적인 빌드 타임 테스트가 포함된 하위 디렉토리(Testing) 설정 로드
  add_subdirectory(Testing)
endif()

